bk_ida/gccida/g1/combine_simplify_rtx
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_simplify_rtx/src/combine.c:4059:35: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  combine_simplify_rtx( rtx x, machine_mode op0_mode, int last, int in_dest) 
                                  ^
                                  enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_simplify_rtx/src/combine.c:4062:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v6; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_simplify_rtx/src/combine.c:4063:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v7; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_simplify_rtx/src/combine.c:4067:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v11; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_simplify_rtx/src/combine.c:4073:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v17; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_simplify_rtx/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_simplify_rtx/src/combine.c:4093:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v37; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_simplify_rtx/src/combine.c:4097:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v41; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_simplify_rtx/src/combine.c:4100:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v44; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_simplify_rtx/src/combine.c:4106:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v50; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_simplify_rtx/src/combine.c:4125:4: error: expected ';' after expression
rtx v70; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_simplify_rtx/src/combine.c:4125:5: error: use of undeclared identifier 'v70'
rtx v70; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_simplify_rtx/src/combine.c:4126:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v71; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_simplify_rtx/src/combine.c:4127:4: error: expected ';' after expression
rtx v72; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_simplify_rtx/src/combine.c:4127:5: error: use of undeclared identifier 'v72'
rtx v72; // rcx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_simplify_rtx/src/combine.c:4131:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v76; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_simplify_rtx/src/combine.c:4138:4: error: expected ';' after expression
rtx v83; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_simplify_rtx/src/combine.c:4138:5: error: use of undeclared identifier 'v83'
rtx v83; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_simplify_rtx/src/combine.c:4147:4: error: expected ';' after expression
rtx v92; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_simplify_rtx/src/combine.c:4147:5: error: use of undeclared identifier 'v92'
rtx v92; // rax 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_simplify_rtx/src/obj/combine.o] Error 1
